# tabletop-board-backend

./: .flake8  Makefile  README.md  dev.env  local.env  mypy.ini  pyproject.toml
.circleci/: config.yml
.github/workflows/: main.yml
backend/: manage.py  pytest.ini
backend/core/: asgi.py  swagger.py  urls.py  wsgi.py
backend/core/settings/: common.py  local.py
backend/tables/: admin.py  models.py  serializers.py  urls.py  views.py
backend/tables/migrations/: 0001_initial.py  0002_table_start_date.py
backend/tables/tests/: test_tables_list.py
docker/: docker-compose.dev.yml  docker-compose.local.yml
docker/backend/: dev.Dockerfile
docker/tabletop-board-backend/: local.Dockerfile
