[tool.poetry]
name = "tabletop-board-backend"
version = "0.1.0"
description = "Service to find players for your tabletop game"
authors = ["Sergei Konik <s.konik.dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Django = "^3.2.3"
djangorestframework = "^3.12.4"
django-environ = "^0.4.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
